--- a/QueueGames.AngularApp/app/view/queueListView.html
+++ b/QueueGames.AngularApp/app/view/queueListView.html
@@ -1,34 +1,32 @@
-﻿<div ng-controller="QueueListController as queueCtrl">
+﻿<form class="form-horizontal ng-valid ng-scope ng-dirty" ng-controller="QueueListController as queueCtrl">
 
-    <div class="table">
-        <div class="row">
-            <div class="col-md-5">Name</div>
-            <div class="col-md-5">
-                <input type="text" class="form-control" id="txtField1" ng-model="queueCtrl.currrentItem.Name" />
-            </div>
+    <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.Name != '' }">
+        <label for="txtField1" class="col-sm-2 control-label">Name</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField1" placeholder="Name of the game" ng-model="queueCtrl.currrentItem.Name">
         </div>
-        <div class="row">
-            <div class="col-md-5">Year lauch</div>
-            <div class="col-md-5">
-                <input type="text" class="form-control" id="txtField2" ng-model="queueCtrl.currrentItem.YearLaunch" />
-            </div>
+    </div>
+    <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.YearLaunch != '' }">
+        <label for="txtField2" class="col-sm-2 control-label">Year lauch</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField2" ng-model="queueCtrl.currrentItem.YearLaunch">
         </div>
-        <div class="row">
-            <div class="col-md-5">Developer</div>
-            <div class="col-md-5">
-                <input type="text" class="form-control" id="txtField3" ng-model="queueCtrl.currrentItem.Developer" />
-            </div>
+    </div>
+    <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.Developer != '' }">
+        <label for="txtField3" class="col-sm-2 control-label">Developer</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField3" ng-model="queueCtrl.currrentItem.Developer">
         </div>
-        <div class="row">
-            <div class="col-md-5">Platform</div>
-            <div class="col-md-5">
-                <input type="text" class="form-control" id="txtField3" ng-model="queueCtrl.currrentItem.Platform" />
-            </div>
+    </div>
+    <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.Platform != '' }">
+        <label for="txtField3" class="col-sm-2 control-label">Platform</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField3" ng-model="queueCtrl.currrentItem.Platform">
         </div>
-        <div class="row">
-            <button type="button" class="btn btn-default" ng-click="queueCtrl.Save()">Save</button>
-        </div>
+    </div>
+    <div class="form-group">
+        <button type="button" class="btn btn-primary" style="margin-left: 450px;" ng-click="queueCtrl.Save()" ng-disabled="queueCtrl.isFormValid()" disabled="disabled">Save</button>
     </div>
 
     <queue-manager src="queueCtrl.listOfItems"></queue-manager>
-</div>
+</form>
