--- a/QueueGames.AngularApp/app/view/queueListView.html
+++ b/QueueGames.AngularApp/app/view/queueListView.html
@@ -1,4 +1,4 @@
-﻿<form class="form-horizontal ng-valid ng-scope ng-dirty" ng-controller="QueueListController as queueCtrl">
+﻿<form class="form-horizontal" ng-controller="QueueListController as queueCtrl">
 
     <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.Name != '' }">
         <label for="txtField1" class="col-sm-2 control-label">Name</label>
