--- a/QueueGames.AngularApp/app/view/ProductEdit.html
+++ b/QueueGames.AngularApp/app/view/ProductEdit.html
@@ -1,17 +1,17 @@
 ﻿<form class="form-horizontal">
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-success': dataSource.ProductName != '' }">
         <label for="txtProductName" class="col-sm-2 control-label">Product name</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="txtProductName" ng-model="dataSource.ProductName" />
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-success': dataSource.QuantityPerUnit != '' }">
         <label for="txtQuantityPerUnit" class="col-sm-2 control-label">Description</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="txtQuantityPerUnit" ng-model="dataSource.QuantityPerUnit" />
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-success': dataSource.UnitPrice != '' }">
         <label for="txtPrice" class="col-sm-2 control-label">Price</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="txtPrice" ng-model="dataSource.UnitPrice" />
