--- a/QueueGames.AngularApp/app/view/ProductsView.html
+++ b/QueueGames.AngularApp/app/view/ProductsView.html
@@ -1,6 +1,4 @@
-﻿<link href="/Content/Products.css" rel="stylesheet" />
-
-<div ng-controller="ProductsController as productCtrl" ng-init="productCtrl.init()">
+﻿<div ng-controller="ProductsController as productCtrl" ng-init="productCtrl.init()">
     <popup-window path="productCtrl.Include()" 
                   popup-title="Product" 
                   src="Products"></popup-window>
@@ -25,7 +23,7 @@
             <tr ng-repeat="product in productCtrl.Products track by product.ProductID">
                 <td class="col-md-4">{{product.ProductName}}</td>
                 <td class="col-md-3">{{product.QuantityPerUnit}}</td>
-                <td class="col-md-2">{{product.UnitPrice}}</td>
+                <td class="col-md-2">{{product.UnitPrice | currency:"USD$"}}</td>
                 <td class="col-md-2">
                     <i class="glyphicon glyphicon-pencil icon" title="Edit" ng-click="productCtrl.edit(product)"></i>
                     <i class="glyphicon glyphicon-thumbs-up icon like" title="Like" ng-click="productCtrl.like(product)"></i>
