--- a/QueueGames.AngularApp/app/view/queueListView.html
+++ b/QueueGames.AngularApp/app/view/queueListView.html
@@ -9,7 +9,7 @@
     <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.YearLaunch != '' }">
         <label for="txtField2" class="col-sm-2 control-label">Year lauch</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField2" ng-model="queueCtrl.currrentItem.YearLaunch">
+            <input type="number" class="form-control ng-valid ng-dirty ng-touched ng-empty" id="txtField2" ng-model="queueCtrl.currrentItem.YearLaunch">
         </div>
     </div>
     <div class="form-group" ng-class="{'has-success': queueCtrl.currrentItem.Developer != '' }">
