Changing size of loading data for grids

--- a/QueueGames.AngularApp/app/view/GamesView.html
+++ b/QueueGames.AngularApp/app/view/GamesView.html
@@ -16,7 +16,7 @@
         <tbody ng-show="gamesCtrl.Games.length < 1 && !gamesCtrl.error">
             <tr class="info">
                 <td colspan="5" class="text-center">
-                    <i class="glyphicon glyphicon-refresh rotate-icon" style="font-size: 2em;"></i>
+                    <i class="glyphicon glyphicon-refresh rotate-icon"></i>
                 </td>
             </tr>
         </tbody>
