--- a/QueueGames.AngularApp/app/view/ProductsView.html
+++ b/QueueGames.AngularApp/app/view/ProductsView.html
@@ -13,9 +13,9 @@
             </tr>
         </thead>
         <tbody ng-show="productCtrl.Products.length < 1 && !productCtrl.error">
-            <tr>
+            <tr class="info">
                 <td colspan="4" class="text-center">
-                    <i class="glyphicon glyphicon-refresh rotate-icon" style="font-size: 2em;"></i>
+                    <i class="glyphicon glyphicon-refresh rotate-icon"></i>
                 </td>
             </tr>
         </tbody>
