--- a/QueueGames.AngularApp/app/view/GamesView.html
+++ b/QueueGames.AngularApp/app/view/GamesView.html
@@ -36,7 +36,7 @@
                 <td class="col-md-2">{{game.Platform}}</td>
                 <td class="col-md-2">
                     <i class="glyphicon glyphicon-pencil icon" title="Edit" ng-click="gamesCtrl.edit(game)"></i>
-                    <i class="glyphicon glyphicon-trash icon remove" title="Delete" ng-click="gamesCtrl.delete(game)"></i>
+                    <i class="glyphicon glyphicon-trash icon" title="Delete" ng-click="gamesCtrl.delete(game)"></i>
                     <i class="glyphicon glyphicon-thumbs-up icon like" title="Like" ng-click="gamesCtrl.like(game)"></i>
                     <i class="glyphicon glyphicon-shopping-cart icon buy" title="Buy" ng-click="gamesCtrl.buy(game)"></i>
                 </td>
