--- a/QueueGames.AngularApp/app/view/GamesCreateEdit.html
+++ b/QueueGames.AngularApp/app/view/GamesCreateEdit.html
@@ -11,7 +11,7 @@
             <input type="number" class="form-control" id="txtYearLaunch" ng-model="dataSource.YearLaunch">
         </div>
     </div>
-    <div class="form-group" ng-class="{'has-success': dataSource.Developer != '' }">
+    <div class="form-group" ng-class="{'has-success': dataSource.Developer != ''">
         <label for="txtField3" class="col-sm-2 control-label">Developer</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="txtDeveloper" ng-model="dataSource.Developer">
