--- a/QueueGames.AngularApp/app/view/ProductEdit.html
+++ b/QueueGames.AngularApp/app/view/ProductEdit.html
@@ -1,14 +1,14 @@
-﻿<form class="form-horizontal">
-    <div class="form-group" ng-class="{'has-success': dataSource.ProductName != '' }">
+﻿<form name="form" class="form-horizontal">
+    <div class="form-group" ng-class="{'has-success': dataSource.ProductName != '', 'has-error': !form.txtProductName.$valid }" >
         <label for="txtProductName" class="col-sm-2 control-label">Product name</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="txtProductName" ng-model="dataSource.ProductName" />
+            <input type="text" class="form-control" id="txtProductName" name="txtProductName" ng-model="dataSource.ProductName" ng-maxlength="40" />
         </div>
     </div>
-    <div class="form-group" ng-class="{'has-success': dataSource.QuantityPerUnit != '' }">
+    <div class="form-group" ng-class="{'has-success': dataSource.QuantityPerUnit != '', 'has-error': !form.txtQuantityPerUnit.$valid }">
         <label for="txtQuantityPerUnit" class="col-sm-2 control-label">Description</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="txtQuantityPerUnit" ng-model="dataSource.QuantityPerUnit" />
+            <input type="text" class="form-control" id="txtQuantityPerUnit" name="txtQuantityPerUnit" ng-model="dataSource.QuantityPerUnit" ng-maxlength="20" />
         </div>
     </div>
     <div class="form-group" ng-class="{'has-success': dataSource.UnitPrice != '' }">
