--- a/QueueGames.AngularApp/app/view/GamesView.html
+++ b/QueueGames.AngularApp/app/view/GamesView.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="GamesController as gamesCtrl" ng-init="gamesCtrl.init()">
     <popup-window path="gamesCtrl.Include()"
-                  popup-title="Games"
+                  popup-title="'Games'"
                   src="game"></popup-window>
     <button class="btn btn-primary" ng-click="gamesCtrl.new()">New game</button>
     <table class="table table-striped">
