--- a/QueueGames.AngularApp/app/view/ProductEdit.html
+++ b/QueueGames.AngularApp/app/view/ProductEdit.html
@@ -11,10 +11,10 @@
             <input type="text" class="form-control" id="txtQuantityPerUnit" name="txtQuantityPerUnit" ng-model="dataSource.QuantityPerUnit" ng-maxlength="20" />
         </div>
     </div>
-    <div class="form-group" ng-class="{'has-success': dataSource.UnitPrice != '' }">
+    <div class="form-group" ng-class="{'has-success': dataSource.UnitPrice != '', 'has-error': !form.txtPrice.$valid }">
         <label for="txtPrice" class="col-sm-2 control-label">Price</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="txtPrice" ng-model="dataSource.UnitPrice" />
+            <input type="number" class="form-control" id="txtPrice" name="txtPrice" ng-model="dataSource.UnitPrice" />
         </div>
     </div>
 </form>
